--- a/papers/gpce2013/biblio.bib
+++ b/papers/gpce2013/biblio.bib
@@ -1,3 +1,22 @@
+@inproceedings{Visser07,
+  title = {{WebDSL}: {A} Case Study in Domain-Specific Language Engineering},
+  author = {Eelco Visser},
+  year = {2007},
+  doi = {http://dx.doi.org/10.1007/978-3-540-88643-3_7},
+  tags = {WebDSL, reusable components, DSL engineering, web application development, data-flow language, pattern language, case study, software components, SDF, meta-model, abstract syntax, modeling language, Stratego/XT, language engineering, software language engineering, language modeling, software component, web engineering, language design, reuse, model-driven development, data-flow, survey, software engineering, model-driven engineering, web applications, DSL, Meta-Environment, incremental, design, process modeling, systematic-approach, ASF+SDF, language, Stratego, domain-specific language},
+  researchr = {http://researchr.org/publication/Visser07},
+  cites = {0},
+  citedby = {8},
+  pages = {291-373},
+  booktitle = {Generative and Transformational Techniques in Software Engineering II, International Summer School, {GTTSE} 2007},
+  editor = {Ralf Lämmel and Joost Visser and João Saraiva},
+  volume = {5235},
+  series = {Lecture Notes in Computer Science},
+  address = {Braga, Portugal},
+  publisher = {Springer},
+  isbn = {978-3-540-88642-6},
+}
+
 @inproceedings{Huang10_Perf,
   title={Anatomizing application performance differences on smartphones},
   author={Huang, Junxian and Xu, Qiang and Tiwana, Birjodh and Mao, Z Morley and Zhang, Ming and
