Add info on the size of the Chooze application

--- a/papers/gpce2013/gpce2013.tex
+++ b/papers/gpce2013/gpce2013.tex
@@ -751,7 +751,7 @@ Chooze~\footnote{Source code is available at
 complete application for making polls. It allows users to create a poll, define the choice
 alternatives, share the poll, vote and look at the results. It contains JavaScript code to handle
 the dynamic behavior of the application: double-posting prevention, dynamic form update and rich
-interaction with the document.
+interaction with the document. The size of the whole application (server and client sides) is about one thousand of lines of code.
 
 The application was initially written using jQuery. We rewrote it in vanilla JavaScript (low-level
 hand-tuned code without third-party library), js-scala, GWT and HaXe.
