mention coffeescript, mention micro-benchmarks, update the figures

--- a/papers/gpce2013/biblio.bib
+++ b/papers/gpce2013/biblio.bib
@@ -1,3 +1,9 @@
+@misc{Ashkenas2011_CoffeeScript,
+  title={Coffeescript},
+  author={Ashkenas, Jeremy},
+  year={2011}
+}
+
 @inproceedings{Visser07,
   title = {{WebDSL}: {A} Case Study in Domain-Specific Language Engineering},
   author = {Eelco Visser},
