more precise indications to find the code of chooze

--- a/papers/gpce2013/gpce2013.tex
+++ b/papers/gpce2013/gpce2013.tex
@@ -732,7 +732,7 @@ more than 4 times higher than others.
 \subsection{Real World Application}
 
 Chooze~\footnote{Source code is available at
-\href{http://github.com/julienrf/chooze}{http://github.com/julienrf/chooze}} is an existing
+\href{http://github.com/julienrf/chooze}{http://github.com/julienrf/chooze}, under the branches \code{vanilla}, \code{jquery}, \code{gwt}, \code{haxe} and \code{js-scala}} is an existing
 complete application for making polls. It allows users to create a poll, define the choice
 alternatives, share the poll, vote and look at the results. It contains JavaScript code to handle
 the dynamic behavior of the application: double-posting prevention, dynamic form update and rich
